--- a/project.html
+++ b/project.html
@@ -19,6 +19,35 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <style type="text/css">
+	ul{/*设置导航栏的框框*/
+					 	margin: auto;
+						 width: 1300px;
+						 height: 10px;
+						padding: 0px 0px;
+						}
+					  li{ 
+						list-style-type: none;
+						float: left;
+						overflow-x: hidden;
+					 } 
+					a{
+						display: block;
+						width: 140px;
+						height: 50px;
+						font-family: Microsoft Yahei;
+						line-height: 50px;
+						background-color: skyblue;
+						margin: 0px 0px;
+						color: skyblue;
+						text-align: center;
+						text-decoration: none;
+						font-size: 15px;
+					}
+					a:hover{
+						background-color: skyblue;
+					}
+	</style>
 </head>
     
     <script language=JavaScript>
@@ -62,7 +91,7 @@ date.setTime(date.getTime() - skew)
 }
 </script>
 <div id="google_translate_element"></div>    
-<body>
+<body background="./qian.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
