--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -17,6 +17,35 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
+    <style type="text/css">
+	ul{/*设置导航栏的框框*/
+					 	margin: auto;
+						 width: 1200px;
+						 height: 10px;
+						padding: 0px 0px;
+						}
+					  li{ 
+						list-style-type: none;
+						float: left;
+						overflow-x: hidden;
+					 } 
+					a{
+						display: block;
+						width: 124px;
+						height: 50px;
+						font-family: Microsoft Yahei;
+						line-height: 50px;
+						background-color: skyblue;
+						margin: 0px 0px;
+						color: skyblue;
+						text-align: center;
+						text-decoration: none;
+						font-size: 15px;
+					}
+					a:hover{
+						background-color: skyblue;
+					}
+	</style>
 </head>
 <body>
     <div >
