--- a/courses.html
+++ b/courses.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <style type="text/css">
+<!--     <style type="text/css">
 	ul{/*设置导航栏的框框*/
 					 	margin: auto;
 						 width: 1200px;
@@ -47,7 +47,7 @@
 					a:hover{
 						background-color: skyblue;
 					}
-	</style>
+	</style> -->
 </head>
     
      
