--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
-    <style type="text/css">
+<!--     <style type="text/css">
 	ul{/*设置导航栏的框框*/
 					 	margin: auto;
 						 width: 1200px;
@@ -44,7 +44,7 @@
 					a:hover{
 						background-color: skyblue;
 					}
-	</style>
+	</style> -->
 </head>
 <body background="http://www.xiaohongshu.com/discovery/item/58b268a3d5945f267a30edd4">
     <div >
