--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
-    <style type="text/css">
+<!--     <style type="text/css">
 	ul{/*设置导航栏的框框*/
 					 	margin: auto;
 						 width: 1200px;
@@ -45,7 +45,7 @@
 					a:hover{
 						background-color: skyblue;
 					}
-	</style>
+	</style> -->
 </head>
 <body>
     <div >
