--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
-	.comference
+	.conference
 	{
 	display:none; /*先将子菜单设置为隐藏*/
 	}
-	li:hover .comference
+	li:hover .conference
 	{
 	display:block;             /*设置鼠标滑过动作，以块级元素的形式显示出子菜单*/
 	}
@@ -54,16 +54,16 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-					<a href=""> comference</a>
+					<a href=""> conference</a>
 				<div class="dropdown_1column">
 				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
 				<div class="col_1">
-				 <ul class="simple">
-				     <li><a href="SHDI Introduction.html">SHDI</a></li>
-				     <li><a href="SMPC Introduction.html">SMPC</a></li>
-				     <li><a href="QPQC Introduction.html">QPQC</a></li>
-				     <li><a href="CSAC Introduction.html">CSAC</a></li>
-				     <li><a href="CC Introduction.html">CC</a></li>
+				 <ul class="conference">
+				     <li class="comference"><a href="SHDI Introduction.html">SHDI</a></li>
+				     <li class="comference"><a href="SMPC Introduction.html">SMPC</a></li>
+				     <li class="comference"><a href="QPQC Introduction.html">QPQC</a></li>
+				     <li class="comference"><a href="CSAC Introduction.html">CSAC</a></li>
+				     <li class="comference"><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</div>
 	           </div>
