--- a/BL syllabus.html
+++ b/BL syllabus.html
@@ -19,7 +19,16 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    
+    <style type="text/css">
+	.conference
+	{
+	display:none; /*先将子菜单设置为隐藏*/
+	}
+	li:hover .conference
+	{
+	display:block;             /*设置鼠标滑过动作，以块级元素的形式显示出子菜单*/
+	}
+	</style>
 </head>
     
     <script language=JavaScript>
