--- a/project.html
+++ b/project.html
@@ -48,11 +48,11 @@
 					}
 	</style> -->
 	<style type="text/css">
-	.conference
+	.Conference
 	{
 	display:none; /*先将子菜单设置为隐藏*/
 	}
-	li:hover .conference
+	li:hover .Conference
 	{
 	display:block;             /*设置鼠标滑过动作，以块级元素的形式显示出子菜单*/
 	}
@@ -120,16 +120,16 @@ date.setTime(date.getTime() - skew)
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-					<a href=""> conference</a>
+					<a href=""> Conference</a>
 				<div class="dropdown_1column">
 				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
 				<div class="col_1">
-				 <ul class="conference">
-				     <li class="conference"><a href="SHDI Introduction.html">SHDI</a></li>
-				     <li class="conference"><a href="SMPC Introduction.html">SMPC</a></li>
-				     <li class="conference"><a href="QPQC Introduction.html">QPQC</a></li>
-				     <li class="conference"><a href="CSAC Introduction.html">CSAC</a></li>
-				     <li class="conference"><a href="CC Introduction.html">CC</a></li>
+				 <ul class="Conference">
+				     <li class="Conference"><a href="SHDI Introduction.html">SHDI</a></li>
+				     <li class="Conference"><a href="SMPC Introduction.html">SMPC</a></li>
+				     <li class="Conference"><a href="QPQC Introduction.html">QPQC</a></li>
+				     <li class="Conference"><a href="CSAC Introduction.html">CSAC</a></li>
+				     <li class="Conference"><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</div>
 	           </div>
