--- a/index.html
+++ b/index.html
@@ -20,22 +20,29 @@
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	<style type="text/css">
-	.Conference
-	{
-	display:none; /*先将子菜单设置为隐藏*/
-	}
-	li:hover .Conference
-	{
-	display:block;             /*设置鼠标滑过动作，以块级元素的形式显示出子菜单*/
-	}
-	#section{
-		background-color:cornsilk;
+	.navbar-collapse li ul{
+			background:white; /*设置二级菜单背景色*/
+			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
+			display:none; /*不再设置为块状显示效果*/
+			height:auto;
+			width: auto;
+			position:absolute;
+			width:130px;
+			z-index:200;
+			margin:0px;
+			list-style-type: none;
+		}
+		.navbar-collapse li:hover ul{
+			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+		}
+
+	
+	#section {
+		background-color:white;
 		text-align: center;
 		padding: 5px;
 		height: auto;
 		border-style: groove;
-		border: ;
-		border-color: darkolivegreen;
 		border-radius: 40px;
 	}
 	#footer {
@@ -47,6 +54,9 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
+	}
+	.induc{
+		color:  skyblue;
 	}
 	</style>
 </head>
@@ -73,21 +83,16 @@
                             <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                                <li class="submenu">
-					<a href=""> Conference</a>
-				<div class="dropdown_1column">
-				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
-				<div class="col_1">
-				 <ul class="Conference">
-				     <li class="Conference"><a href="SHDI Introduction.html">SHDI</a></li>
-				     <li class="Conference"><a href="SMPC Introduction.html">SMPC</a></li>
-				     <li class="Conference"><a href="QPQC Introduction.html">QPQC</a></li>
-				     <li class="Conference"><a href="CSAC Introduction.html">CSAC</a></li>
-				     <li class="Conference"><a href="CC Introduction.html">CC</a></li>
+                             <li class="submenu">
+				<a href=""> conference</a>
+				  <ul class="conference">
+				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
+					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
+					<li ><a href="QPQC Introduction.html">QPQC</a></li>
+					<li ><a href="CSAC Introduction.html">CSAC</a></li>
+					<li ><a href="CC Introduction.html">CC</a></li>
 				</ul>
-			</div>
-	           </div>
-	       </li>
+			</li>
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
