--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
 		.navbar-collapse li:hover ul{
 			display:block;	/*鼠标移动到上面的时候为块状显示。*/
 		}
-
-	
+		div.navbar-collapse ul li a, div.menu ul li a:visited{
+/* 			color: #000000; */
+			text-decoration: none; 
+			white-space: nowrap; 
+			/* margin-left:10px; */
+			text-align: center;
+		}
 	#section {
 		background-color:white;
 		text-align: center;
@@ -84,8 +89,8 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                              <li class="submenu">
-				<a href=""> conference</a>
-				  <ul class="conference">
+				<a href=""> Conference</a>
+				  <ul class="Conference">
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
