--- a/SC syllabus.html
+++ b/SC syllabus.html
@@ -20,14 +20,31 @@
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <style type="text/css">
-	.Conference
-	{
-	display:none; /*先将子菜单设置为隐藏*/
-	}
-	li:hover .Conference
-	{
-	display:block;             /*设置鼠标滑过动作，以块级元素的形式显示出子菜单*/
-	}
+	ul{/* 设置导航栏的框框 */
+							 	margin: auto;
+								 width: 1200px;
+								 height: 10px;
+								padding: 0px 0px;
+								}
+							a:hover{
+								background-color: skyblue;
+							}
+	.navbar-collapse li ul{
+/* 			background:white; 设置二级菜单背景色 */
+			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
+			display:none; /*不再设置为块状显示效果*/
+			height:auto;
+			width: auto;
+			position:absolute;
+			width:1000px;
+			z-index:200;
+			margin:0px;
+			list-style-type: none;
+		}
+		.navbar-collapse li:hover ul{
+			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+		}
+
 	</style>
 </head>
     
@@ -93,20 +110,15 @@ date.setTime(date.getTime() - skew)
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                <li class="submenu">
-					<a href=""> Conference</a>
-				<div class="dropdown_1column">
-				<!-- <a href="#" class="dropbtn" onclick=""></a> -->
-				<div class="col_1">
-				 <ul class="Conference">
-				     <li class="Conference"><a href="SHDI Introduction.html">SHDI</a></li>
-				     <li class="Conference"><a href="SMPC Introduction.html">SMPC</a></li>
-				     <li class="Conference"><a href="QPQC Introduction.html">QPQC</a></li>
-				     <li class="Conference"><a href="CSAC Introduction.html">CSAC</a></li>
-				     <li class="Conference"><a href="CC Introduction.html">CC</a></li>
+				<a href=""> Conference</a>
+				  <ul class="Conference"><i><em></em></i>
+				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
+					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
+					<li ><a href="QPQC Introduction.html">QPQC</a></li>
+					<li ><a href="CSAC Introduction.html">CSAC</a></li>
+					<li ><a href="CC Introduction.html">CC</a></li>
 				</ul>
-			</div>
-	           </div>
-	       </li>
+			</li>
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
