--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -62,7 +62,16 @@
 		.navbar-collapse li:hover ul{
 			display:block;	/*鼠标移动到上面的时候为块状显示。*/
 		}
-
+        #footer {
+	    background-color:skyblue;
+	    color:white;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
+		border-style: groove;
+		border-color: aqua;
+		border-radius: 20px;
+	}
 	</style>
 
 </head>
@@ -113,14 +122,16 @@
             <div class="introdution">
             <div id="theme">
                  <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png"  style="width: 210px; height: 213px; " ></a> <br/>
-                <p style="text-indent:2em ">With rapid development of cyberspace security, artificial intelligence and cloud computing, researchers in academia and industry have constructed a large number of schemes, and designed many algorithms. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation provide a good foundation and opportunity for solving the above problems.<br/>
+		    <p style="text-indent:2em ">With rapid development of cyberspace security, artificial intelligence and cloud computing, researchers in academia and industry have constructed a large number of schemes, and designed many algorithms. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation provide a good foundation and opportunity for solving the above problems.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; SHDI symposium would like to invit well-known researchers all over the world to present their best works about design and implementation of software and hardware on Cybersecurity schemes and algotihms. Everyone, who does the best works on above fields, will be invited to attend SHDI symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
+			    <div id="footer">
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposium-2019</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2020.html">SHDI Symposium-2020</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
+		</div>
             </div> 
     </div>
 </body>
