--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -17,40 +17,9 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
-<!--     <style type="text/css">
-	ul{/*设置导航栏的框框*/
-					 	margin: auto;
-						 width: 1200px;
-						 height: 10px;
-						padding: 0px 0px;
-						}
-					  li{ 
-						list-style-type: none;
-						float: left;
-						overflow-x: hidden;
-					 } 
-					a{
-						display: block;
-						width: 124px;
-						height: 50px;
-						font-family: Microsoft Yahei;
-						line-height: 50px;
-						background-color: skyblue;
-						margin: 0px 0px;
-						color: skyblue;
-						text-align: center;
-						text-decoration: none;
-						font-size: 15px;
-					}
-					a:hover{
-						background-color: skyblue;
-					}
-	</style> -->
 	<style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none; 
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -60,18 +29,18 @@
 			list-style-type: none;
 		}
 		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+			display:block;
 		}
 		#footer {
-	    background-color:skyblue;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
-		border-style: groove;
-		border-color: aqua;
-		border-radius: 20px;
-	}
+	                background-color:skyblue;
+	                color:white;
+	                clear:both;
+	                text-align:center;
+	                padding:5px; 
+		        border-style: groove;
+		        border-color: aqua;
+		        border-radius: 20px;
+	       }
 	</style>
 </head>
 <body>
@@ -94,16 +63,14 @@
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                <li class="submenu">
 				<a href=""> Conference</a>
-				  <ul class="Conference"><i><em></em></i>
+				   <ul class="Conference"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
 					<li ><a href="CC Introduction.html">CC</a></li>
-				</ul>
-			</li>
-
-
+				 </ul>
+			     </li>
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
@@ -125,14 +92,14 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; QPQC symposium would like to invit well-known researchers all over the world to present their best works (QPC and QC)about state-of-art, research trends and applications on PQC and QC. Everyone, who does the best works on above fields, will be invited to attend QPQC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-			</p>
-			<div id="footer">
+		</p>
+		  <div id="footer">
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2016.html">QPQC Symposiu-2016</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2017.html">QPQC Symposiu-2017</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2018.html">QPQC Symposiu-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2019.html">QPQC Symposiu-2019</a> <br/>
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2020.html">QPQC Symposiu-2020</a> <br/>
-		    </div>
+		  </div>
             </div> 
             </div>
            
