--- a/index.html
+++ b/index.html
@@ -19,57 +19,53 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-   <style type="text/css">
+	<style type="text/css">
 	.navbar-collapse li ul{
+			background:white; 
 			display:none;
 			height:auto;
-			width: auto;
 			position:absolute;
-			z-index:200;
+			width:100%;
 			margin:0px;
-		        width:100px;
 			list-style-type: none;
+			text-align: center;
 		}
-	.navbar-collapse li:hover ul{
+		.navbar-collapse li:hover ul{
 			display:block;
+			display: -ms-flexbox;
 		}
-	#section {
-		background-color:skyblue;
-/* 		text-align: center; */
+	 #section {
+		background-color:white;
 		padding: 5px;
 		height: auto;
 		border-style: groove;
 		border-radius: 40px;
-		color:white;
-		text-align:justify;
-		line-height: 30px;
+		margin-top: 15px;
+		text-align: justify; 
+		line-height: 22px;
 	}
 	#footer {
-	        background-color:skyblue;
-	        color:white;
-	        clear:both;
-	        text-align:center;
-	        padding:5px; 
+	    background-color:skyblue;
+	    color:white;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 5px;
-		margin-bottom:5px;
-		line-height: 30px;
+		margin-top: 15px;
 	}
 	.induc{
 		color:  skyblue;
-	}
+	} 
 	</style>
 </head>
     
-   
-
-<div id="google_translate_element"></div>    
+     
 <body>
     <div >
         <div id="head">
-            <header style="min-height: 60px;">
+            <header style="min-height: 76px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
@@ -79,14 +75,14 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-<!--                               <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
+                            <!--   <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
                         </div>
                         <div id="navbar-collapse" class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav navbar-center">
+                           <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                             <li class="submenu">
-				<a href="Conferences.html"> Conferences</a>
+                                <li class="submenu">
+				<a href=""> Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -98,7 +94,7 @@
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
-                                 <li class="submenu">
+                                <li class="submenu">
                                     <a href="project.html">Projects</a>
                                 </li>
                                 <li class="submenu">
@@ -111,28 +107,28 @@
             </header>
 
             <div id = "introdution">
-            <div class="introdution">
-                <div id="theme">
-		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" ></a> <br/>
-                    <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
-                   <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
-                    <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
-<!--                      <hr> -->
-			<div id="section">
-                    <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. We have invited a group of professors and researchers in information science to join DFSC.<br/>
-                    <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposium,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has been built a series of co-operations with Universities/Colleges/Schools and Enterprises.<br/>
-                    <p style="text-indent:2em ">We also provide <a href="courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of Privacy, Secure Multi-party Computation, AI and IoT etc. <br/>
-			</div>
-<!--                     <hr> -->
-                    <div id="footer">
-                    <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
-                    <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
-			</div>
-		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
-     <script type="text/javascript">
-         function googleTranslateElementInit() {
-         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-    }
-    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>        
-</body>               
-</html>
+                        <div class="introdution">
+                            <div id="theme">
+            		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" ></a> <br/>
+                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                                <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
+            <!--                      <hr> -->
+            			<div id="section">
+                                <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. We have invited a group of professors and researchers in information science to join DFSC.<br/>
+                                <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposium,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has been built a series of co-operations with Universities/Colleges/Schools and Enterprises.<br/>
+                                <p style="text-indent:2em ">We also provide <a href="courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of Privacy, Secure Multi-party Computation, AI and IoT etc. <br/>
+            			</div>
+            <!--                     <hr> -->
+                                <div id="footer">
+                                <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
+                                <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
+            			</div>
+            		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
+                 <script type="text/javascript">
+                     function googleTranslateElementInit() {
+                     new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+                }
+                </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>        
+            </body>               
+            </html>
