--- a/courses.html
+++ b/courses.html
@@ -157,8 +157,8 @@
 		    <div id="footer2">
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/> 
 		    </div>
+		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
         </div>
-	<div style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
 <script type="text/javascript">
 function googleTranslateElementInit() {
 new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
