--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
                            <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+				   <li class="submenu">
+                                    <a href="">News</a>
+                                </li>
                                 <li class="submenu">
-				<a href=""> Conferences</a>
+				<a href="">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
