--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
 				   <li class="submenu">
-                                    <a href="">News</a>
+                                    <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="">Conferences</a>
+				<a href="Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
